{
    "name": "InputManager",
    "maps": [
        {
            "name": "GamePlay",
            "id": "3f386987-1e25-4c77-868b-53a12780c128",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "27cf8e9a-0d08-4b9f-bd83-55af39f20fc4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "ebe9d74c-3cd7-4d00-95ed-c1d51d5b0939",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "d51d5877-11b7-4303-b801-013ad8338560",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Value",
                    "id": "dc74e0da-1e24-4b1e-a417-cd84b4c8d7da",
                    "expectedControlType": "",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "b2222666-ea52-4fd3-9ff2-7d270e9a77df",
                    "expectedControlType": "",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Teleport",
                    "type": "Value",
                    "id": "ec12e1d3-e6ec-45fb-9027-3d41926d8ca0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Use",
                    "type": "Value",
                    "id": "4bae8f47-477a-475f-bb78-c28002aa59d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Value",
                    "id": "8e3de776-4bc6-459c-8cb2-43b88ec0bb11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "14a6cdd1-01d5-4943-9177-568a12325890",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "38510937-d238-4409-a114-89a6d3f984ce",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dbbdc098-9166-4b38-b923-df481f2fc945",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4017f851-2118-4188-a436-81d076b994b1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "283e761e-20c5-44d2-9b20-ac1ad3533a6e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "920874f4-0d45-427e-9e45-b95f7fad0d02",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "90c740de-3254-441b-a4bf-11a1346c3e0e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "abaf538d-e7cb-41b9-bdcd-40ee6449c903",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "60b5e0a7-eb56-4e04-bfbf-7aba67a7fcfb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a1c25721-8405-49ec-95c0-9890c7f1e2ae",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c09c5ecc-5f5b-47aa-8469-584a6603e43c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfe90945-d80f-4a8e-8230-df9dce607886",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bca71629-1f99-4f0a-a2c1-4ed01dd2bb0b",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30c2de17-49fa-471c-b990-6b3696e1bfe1",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c91ff86a-cb82-41f4-ab17-94419b740730",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54dc6834-b171-4a88-85d1-8357afa773a2",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529add94-8a9d-46ce-b3e3-8cb287e109af",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb214da1-68ee-4b23-8c1f-b546863e8297",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc0c096b-1c11-45fd-8b81-49c2715be26b",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30de6fb1-df38-4a8a-8b71-1377abae6e44",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e8d59fd-5d72-4486-8b67-2a7396893258",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5daa7dd-1314-4cf2-ac65-90f7f34220c7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7b7aede-759b-43e0-a056-c4541469516e",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c220814d-abb6-480b-be59-9d91070f2060",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b97d21e1-b115-418b-8cea-8a0ce6a56aff",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and mouse",
            "bindingGroup": "Keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}